得意料理の変更

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                 <h4>岩崎さん</h4>
                                 <p>三重県を中心に仕事をしている、情報処理科の先生です。</p>
                                 <p>木曜日と日曜日は太鼓をしています。</p>
-                                <p>得意料理はハンバーグです。</p>
+                                <p>得意料理はカレーライスです。</p>
                             </div>
                         </div>
                         <div class="speaker">
