得意料理を編集

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 <h4>三谷さん</h4>
                                 <p>明和町に住んでいる若手プログラマー</p>
                                 <p>休日は猫と戯れることが多い</p>
-                                <p>得意料理はたこ焼き</p>
+                                <p>得意料理はお好み焼き</p>
                             </div>
                         </div>
                     </article>
